# biconvex_mpc

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  libbiconvex_mpc.dylib  package.xml  setup.py  test_fista  test_ik  yaml_test.py
biconvex_mpc.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
clean_demos/: mpc_non_rt.py  trajectory_optimization.py
contact_planner/: acyclic_contact_generator.py  contact_planner.py  cyclic_generator.py
controllers/: robot_id_controller.py  tsid_controller.py
demos/: load_robot.py
demos/analysis/: dyn_violation.py  solve_times_test.py
demos/cpp_motion_planner/: solo12_jump_wm.py  test.py
demos/dynamics/: centroidal.py  cpp_centroidal.py  test_problem.py
demos/ik/: 2dof_ik.ipynb  action_model.py  atlas_ik.ipynb  atlas_ik.py  com_tasks.py  demo_solo12.ipynb  end_effector_tasks.py  ik_cpp.py  inverse_kinematics.py  re-ik.ipynb  regularization_costs.py  robots.py  solo12.ipynb  solo12_trot.ipynb  solo12_trot.py  talos_ik.ipynb
demos/ik/.ipynb_checkpoints/: 2dof_ik-checkpoint.ipynb  solo12-checkpoint.ipynb  solo12_trot-checkpoint.ipynb
demos/motion_planner/: ID_test.ipynb  biconvex.py  cnt_plan_utils.py  solo12_bound.py  solo12_dance.py  solo12_flip.py  solo12_ik_visualizer.ipynb  solo12_jump.py  solo12_jump_mpc.py  solo12_jump_wm.py  solo12_rearing.py  solo12_trot.ipynb  solo12_trot.py  solo12_trot_wm.py  test_problem.py
demos/motion_planner/.ipynb_checkpoints/: ID_test-checkpoint.ipynb  solo12_ik_visualizer-checkpoint.ipynb  solo12_trot-checkpoint.ipynb
demos/mpc/: Untitled.ipynb  a1_cyclic.py  a1_gait_params.py  a1_mpc_gait_gen.py  a1_trot.py  a1_trot_inf.py  abstract_acyclic_gen.py  abstract_balance_gen.py  abstract_cyclic_gen.py  abstract_gait_gen.py  abstract_mpc_gait_gen.py  abstract_mpc_gait_gen_turn.py  acyclic_viz.ipynb  atlas_cyclic_gen.py  atlas_gait_params.py  atlas_mpc_gait_gen.py  atlas_stand.py  atlas_walk.py  biped_cyclic_gen.py  cartwheel.ipynb  cartwheel.py  cartwheel_mpc.ipynb  controller_node.py  data_plotter.py  debug.py  dyn_violation.py  mpc_bound_gen.py  mpc_cartwheel.py  mpc_gait_gen.py  plan_cartwheel.py  plan_hifive.py  plan_jump_fwd.py  robot_id_controller.py  solo12_acyclic.py  solo12_acyclic_contact_test.py  solo12_balance.py  solo12_cyclic.py  solo12_gait_params.py  solo12_gait_transition.py  solo12_robustness_analysis.py  (+10 more)
demos/solvers/: cpp_fista.py  cpp_prob_data.py  test_problem.py
demos/threading/: gamepad_publisher.py  mpc_gait_gen.py  publish_demo.py  publish_demo_2.py  raisim_env_standalone.py  solo12_standalone_mpc.py
environment_interface/: environment_interface.py  raisim_interface.py
examples/: Makefile  QuickStart-1.ipynb  QuickStart-2.ipynb  a1_cyclic.py  anymal.ipynb  anymal_cyclic.py  atlas_acyclic.py  atlas_acyclic_TO.py  atlas_jump_test.py  atlas_standing_test_MPC.py  atlas_standing_test_TO.py  atlas_test.ipynb  atlas_test.py  atlas_walk_test.py  bolt_acyclic_MPC.py  bolt_acyclic_TO.py  bolt_humanoid_acyclic.py  bolt_humanoid_acyclic_TO.py  bolt_humanoid_balancing.py  bolt_humanoid_cyclic.py  bolt_humanoid_cyclic_TO.py  bolt_humanoid_planned_stand.py  cmake_install.cmake  solo12_acyclic.py  solo12_bound_test.py  solo12_cyclic.py  solo12_cyclic_terminal.py  solo12_gait_transition.py  solo12_planned_jump.py  talos_acyclic.py  talos_acyclic_MPC.py  talos_acyclic_TO.py  talos_cyclic.py  talos_cyclic_TO.py  talos_test.ipynb  talos_test.py  talos_tmp.py  trot_viz.ipynb
examples/.ipynb_checkpoints/: QuickStart-2-checkpoint.ipynb  anymal-checkpoint.ipynb  atlas_test-checkpoint.ipynb  talos_test-checkpoint.ipynb
examples/analysis/: solo12_robustness_analysis.py
examples/cmake/: tmp-cxx-standard.cpp
examples/controllers/: robot_id_controller.py
examples/envs/: abstract_env.py  pybullet_env.py
examples/ik/: atlas_ik.ipynb  atlas_ik.py  atlas_ik_croc_model.py  ik_cpp.py  solo12.ipynb  solo12_trot.ipynb
examples/motions/: weight_abstract.py
examples/mpc/: abstract_acyclic_gen.py  abstract_acyclic_gen1.py  abstract_acyclic_gen2.py  abstract_acyclic_gen_atlas.py  abstract_acyclic_gen_bolt.py  abstract_acyclic_gen_bolt_humanoid.py  abstract_cyclic_gen.py  abstract_cyclic_gen1.py  abstract_cyclic_gen_bolt_humanoid.py  abstract_cyclic_gen_terminal.py  anymal_cyclic_gen.py  data_plotter.py
examples/solvers/: fista.py
include/: fista.hpp  problem.hpp
include/dynamics/: centroidal.hpp
include/gait_planner/: gait_planner.hpp
include/ik/: action_model.hpp  inverse_kinematics.hpp  template.hpp
include/motion_planner/: biconvex.hpp  kino_dyn.hpp
include/robot_model/: robot_model.hpp
include/solvers/: fista.hpp  problem.hpp
paths/: paths.py
py_biconvex_mpc/bullet_utils/: a1_mpc_env.py  a1_state_estimator.py  atlas_mpc_env.py  solo_env old.py  solo_env.py  solo_mpc_env.py  solo_state_estimator.py  trajectory_generator.py
py_biconvex_mpc/dynamics/: centroidal.py  centroidal_semi_implicit.py
py_biconvex_mpc/ik/: action_model.py  com_tasks.py  end_effector_tasks.py  inverse_kinematics.py  regularization_costs.py
py_biconvex_mpc/ik_utils/: abstract_gait_generator.py  gait_generator.py
py_biconvex_mpc/inverse_kinematics/: inverse_kinemaics.py
py_biconvex_mpc/motion_planner/: biconvex.py  biconvex_osqp.py  cost.py  cpp_biconvex.py
py_biconvex_mpc/solvers/: fista.py
python/dynamics/: centroidal.py
python/motion_planner/: biconvex.py
robot_interface/: robot_interface.py
robot_model/: robot_model.py
robots/a1/: robot_info.yaml
robots/atlas/: robot_info.yaml
robots/solo12/: robot_info.yaml
src/: fista.cpp  problem.cpp  test_fista.cpp  test_ik.cpp
src/dynamics/: centroidal.cpp
src/gait_planner/: gait_planner.cpp
src/ik/: action_model.cpp  com_tasks.cpp  end_effector_tasks.cpp  inverse_kinematics.cpp  regularization_costs.cpp
src/motion_planner/: biconvex.cpp  kino_dyn.cpp
src/robot_model/: robot_model.cpp
src/solvers/: fista.cpp  problem.cpp  test_fista.cpp
srcpy/gait_planner/: py_gait_planner.cpp
srcpy/ik/: inverse_kinematics.cpp
srcpy/motion_planner/: biconvex.cpp
srcpy/solvers/: fista.cpp
(+55 files in other folders)
